Update version and changelogs in JSON file

--- a/cs_treasure_hunt_app.json
+++ b/cs_treasure_hunt_app.json
@@ -1,16 +1,13 @@
 [
   {
-    "version": "1.0.2",
+    "version": "1.0.1",
     "changelogs": [
-      "- ralo2",
-      "- testo2"
+      "- Added Bridge for frameworks",
+      "- Better plate generation"
     ]
   },
   {
     "version": "1.0.0",
-    "changelogs": [
-      "- ralo",
-      "- testo"
-    ]
+    "changelogs": []
   },
 ]
